--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Palindrome Birthday</title>
     <link rel="stylesheet" href="style.css" />
-
+    <script src="https://kit.fontawesome.com/fa50d5d333.js" crossorigin="anonymous"></script>
 
 </head>
 
@@ -19,5 +19,9 @@
 
     <script src="app.js" type="text/javascript"></script>
 </body>
+<footer>
+    <h2>See code</h2>
+    <a class="gt" href="https://github.com/aniketsingh13"><i class="fab fa-github"></i></a>
+</footer>
 
 </html>
